// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HerdcCodeField component should not render unknown value 1`] = `
<Memo(NewGenericSelectField)
  canUnselect={true}
  error={false}
  errorText=""
  genericSelectFieldId="rek-herdc-code"
  input={
    Object {
      "value": "999",
    }
  }
  itemsList={
    Array [
      Object {
        "text": "(None)",
        "value": "0",
      },
      Object {
        "text": "A1 Authored Book (Research)",
        "value": "450001",
      },
      Object {
        "text": "AX Edited Book; Book (Other Public Output)",
        "value": "450005",
      },
      Object {
        "text": "B1 Book Chapter (Research, Critical Review of Research)",
        "value": "450006",
      },
      Object {
        "text": "BX Book Chapter (Other Public Output)",
        "value": "450008",
      },
      Object {
        "text": "C1 Refereed Journal Article (Research, Critical Review of Research)",
        "value": "450009",
      },
      Object {
        "text": "CX Journal Article (Other Public Output)",
        "value": "450013",
      },
      Object {
        "text": "E1 Refereed Conference Paper (Fully Published)",
        "value": "450014",
      },
      Object {
        "text": "EX Conference Paper (Other Public Output)",
        "value": "450018",
      },
      Object {
        "text": "CW1 Creative Work",
        "value": "454028",
      },
      Object {
        "text": "CW2 Live Performance of Creative Work",
        "value": "454029",
      },
      Object {
        "text": "CW3 Recorded or Rendered Creative Work",
        "value": "454030",
      },
      Object {
        "text": "CW4 Curated or Produced Exhibition or Event",
        "value": "454031",
      },
      Object {
        "text": "CW5 Research Report for an External Body",
        "value": "454032",
      },
    ]
  }
  locale={
    Object {
      "label": undefined,
    }
  }
  value="999"
/>
`;

exports[`HerdcCodeField component should render a current value 1`] = `
<Memo(NewGenericSelectField)
  canUnselect={true}
  error={false}
  errorText=""
  genericSelectFieldId="rek-herdc-code"
  input={
    Object {
      "value": "454028",
    }
  }
  itemsList={
    Array [
      Object {
        "text": "(None)",
        "value": "0",
      },
      Object {
        "text": "A1 Authored Book (Research)",
        "value": "450001",
      },
      Object {
        "text": "AX Edited Book; Book (Other Public Output)",
        "value": "450005",
      },
      Object {
        "text": "B1 Book Chapter (Research, Critical Review of Research)",
        "value": "450006",
      },
      Object {
        "text": "BX Book Chapter (Other Public Output)",
        "value": "450008",
      },
      Object {
        "text": "C1 Refereed Journal Article (Research, Critical Review of Research)",
        "value": "450009",
      },
      Object {
        "text": "CX Journal Article (Other Public Output)",
        "value": "450013",
      },
      Object {
        "text": "E1 Refereed Conference Paper (Fully Published)",
        "value": "450014",
      },
      Object {
        "text": "EX Conference Paper (Other Public Output)",
        "value": "450018",
      },
      Object {
        "text": "CW1 Creative Work",
        "value": "454028",
      },
      Object {
        "text": "CW2 Live Performance of Creative Work",
        "value": "454029",
      },
      Object {
        "text": "CW3 Recorded or Rendered Creative Work",
        "value": "454030",
      },
      Object {
        "text": "CW4 Curated or Produced Exhibition or Event",
        "value": "454031",
      },
      Object {
        "text": "CW5 Research Report for an External Body",
        "value": "454032",
      },
    ]
  }
  locale={
    Object {
      "label": undefined,
    }
  }
  value="454028"
/>
`;

exports[`HerdcCodeField component should render a deprecated value 1`] = `
<Memo(NewGenericSelectField)
  canUnselect={true}
  error={false}
  errorText=""
  genericSelectFieldId="rek-herdc-code"
  input={
    Object {
      "value": "450033",
    }
  }
  itemsList={
    Array [
      Object {
        "text": "(None)",
        "value": "0",
      },
      Object {
        "text": "A1 Authored Book (Research)",
        "value": "450001",
      },
      Object {
        "text": "AX Edited Book; Book (Other Public Output)",
        "value": "450005",
      },
      Object {
        "text": "B1 Book Chapter (Research, Critical Review of Research)",
        "value": "450006",
      },
      Object {
        "text": "BX Book Chapter (Other Public Output)",
        "value": "450008",
      },
      Object {
        "text": "C1 Refereed Journal Article (Research, Critical Review of Research)",
        "value": "450009",
      },
      Object {
        "text": "CX Journal Article (Other Public Output)",
        "value": "450013",
      },
      Object {
        "text": "E1 Refereed Conference Paper (Fully Published)",
        "value": "450014",
      },
      Object {
        "text": "EX Conference Paper (Other Public Output)",
        "value": "450018",
      },
      Object {
        "text": "CW1 Creative Work",
        "value": "454028",
      },
      Object {
        "text": "CW2 Live Performance of Creative Work",
        "value": "454029",
      },
      Object {
        "text": "CW3 Recorded or Rendered Creative Work",
        "value": "454030",
      },
      Object {
        "text": "CW4 Curated or Produced Exhibition or Event",
        "value": "454031",
      },
      Object {
        "text": "CW5 Research Report for an External Body",
        "value": "454032",
      },
      Object {
        "text": "J5 Major Creative Works - Recorded Works",
        "value": "450033",
      },
    ]
  }
  locale={
    Object {
      "label": undefined,
    }
  }
  value="450033"
/>
`;

exports[`HerdcCodeField component should render default view 1`] = `
<Memo(NewGenericSelectField)
  canUnselect={true}
  error={false}
  errorText=""
  genericSelectFieldId="rek-herdc-code"
  itemsList={
    Array [
      Object {
        "text": "(None)",
        "value": "0",
      },
      Object {
        "text": "A1 Authored Book (Research)",
        "value": "450001",
      },
      Object {
        "text": "AX Edited Book; Book (Other Public Output)",
        "value": "450005",
      },
      Object {
        "text": "B1 Book Chapter (Research, Critical Review of Research)",
        "value": "450006",
      },
      Object {
        "text": "BX Book Chapter (Other Public Output)",
        "value": "450008",
      },
      Object {
        "text": "C1 Refereed Journal Article (Research, Critical Review of Research)",
        "value": "450009",
      },
      Object {
        "text": "CX Journal Article (Other Public Output)",
        "value": "450013",
      },
      Object {
        "text": "E1 Refereed Conference Paper (Fully Published)",
        "value": "450014",
      },
      Object {
        "text": "EX Conference Paper (Other Public Output)",
        "value": "450018",
      },
      Object {
        "text": "CW1 Creative Work",
        "value": "454028",
      },
      Object {
        "text": "CW2 Live Performance of Creative Work",
        "value": "454029",
      },
      Object {
        "text": "CW3 Recorded or Rendered Creative Work",
        "value": "454030",
      },
      Object {
        "text": "CW4 Curated or Produced Exhibition or Event",
        "value": "454031",
      },
      Object {
        "text": "CW5 Research Report for an External Body",
        "value": "454032",
      },
    ]
  }
  locale={
    Object {
      "label": undefined,
    }
  }
  value=""
/>
`;

exports[`HerdcCodeField component should render immutable list as selected value with given field props 1`] = `
<Memo(NewGenericSelectField)
  canUnselect={true}
  error={true}
  errorText="Test error"
  genericSelectFieldId="rek-herdc-code"
  input={
    Object {
      "onChange": [MockFunction],
      "value": Immutable.List [
        "One",
        "Two",
      ],
    }
  }
  itemsList={
    Array [
      Object {
        "text": "(None)",
        "value": "0",
      },
      Object {
        "text": "A1 Authored Book (Research)",
        "value": "450001",
      },
      Object {
        "text": "AX Edited Book; Book (Other Public Output)",
        "value": "450005",
      },
      Object {
        "text": "B1 Book Chapter (Research, Critical Review of Research)",
        "value": "450006",
      },
      Object {
        "text": "BX Book Chapter (Other Public Output)",
        "value": "450008",
      },
      Object {
        "text": "C1 Refereed Journal Article (Research, Critical Review of Research)",
        "value": "450009",
      },
      Object {
        "text": "CX Journal Article (Other Public Output)",
        "value": "450013",
      },
      Object {
        "text": "E1 Refereed Conference Paper (Fully Published)",
        "value": "450014",
      },
      Object {
        "text": "EX Conference Paper (Other Public Output)",
        "value": "450018",
      },
      Object {
        "text": "CW1 Creative Work",
        "value": "454028",
      },
      Object {
        "text": "CW2 Live Performance of Creative Work",
        "value": "454029",
      },
      Object {
        "text": "CW3 Recorded or Rendered Creative Work",
        "value": "454030",
      },
      Object {
        "text": "CW4 Curated or Produced Exhibition or Event",
        "value": "454031",
      },
      Object {
        "text": "CW5 Research Report for an External Body",
        "value": "454032",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  meta={
    Object {
      "error": "Test error",
    }
  }
  onChange={[MockFunction]}
  placeholder="Test placeholder"
  value={
    Immutable.List [
      "One",
      "Two",
    ]
  }
/>
`;

exports[`HerdcCodeField component should render when given a default value field props 1`] = `
<Memo(NewGenericSelectField)
  canUnselect={true}
  defaultValue="afr"
  error={false}
  errorText=""
  genericSelectFieldId="rek-herdc-code"
  itemsList={
    Array [
      Object {
        "text": "(None)",
        "value": "0",
      },
      Object {
        "text": "A1 Authored Book (Research)",
        "value": "450001",
      },
      Object {
        "text": "AX Edited Book; Book (Other Public Output)",
        "value": "450005",
      },
      Object {
        "text": "B1 Book Chapter (Research, Critical Review of Research)",
        "value": "450006",
      },
      Object {
        "text": "BX Book Chapter (Other Public Output)",
        "value": "450008",
      },
      Object {
        "text": "C1 Refereed Journal Article (Research, Critical Review of Research)",
        "value": "450009",
      },
      Object {
        "text": "CX Journal Article (Other Public Output)",
        "value": "450013",
      },
      Object {
        "text": "E1 Refereed Conference Paper (Fully Published)",
        "value": "450014",
      },
      Object {
        "text": "EX Conference Paper (Other Public Output)",
        "value": "450018",
      },
      Object {
        "text": "CW1 Creative Work",
        "value": "454028",
      },
      Object {
        "text": "CW2 Live Performance of Creative Work",
        "value": "454029",
      },
      Object {
        "text": "CW3 Recorded or Rendered Creative Work",
        "value": "454030",
      },
      Object {
        "text": "CW4 Curated or Produced Exhibition or Event",
        "value": "454031",
      },
      Object {
        "text": "CW5 Research Report for an External Body",
        "value": "454032",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  placeholder="Test placeholder"
  value=""
/>
`;

exports[`HerdcCodeField component should render with given field props 1`] = `
<Memo(NewGenericSelectField)
  canUnselect={true}
  error={true}
  errorText="Test error"
  genericSelectFieldId="rek-herdc-code"
  input={
    Object {
      "onChange": [MockFunction],
      "value": Array [
        "One",
        "Two",
      ],
    }
  }
  itemsList={
    Array [
      Object {
        "text": "(None)",
        "value": "0",
      },
      Object {
        "text": "A1 Authored Book (Research)",
        "value": "450001",
      },
      Object {
        "text": "AX Edited Book; Book (Other Public Output)",
        "value": "450005",
      },
      Object {
        "text": "B1 Book Chapter (Research, Critical Review of Research)",
        "value": "450006",
      },
      Object {
        "text": "BX Book Chapter (Other Public Output)",
        "value": "450008",
      },
      Object {
        "text": "C1 Refereed Journal Article (Research, Critical Review of Research)",
        "value": "450009",
      },
      Object {
        "text": "CX Journal Article (Other Public Output)",
        "value": "450013",
      },
      Object {
        "text": "E1 Refereed Conference Paper (Fully Published)",
        "value": "450014",
      },
      Object {
        "text": "EX Conference Paper (Other Public Output)",
        "value": "450018",
      },
      Object {
        "text": "CW1 Creative Work",
        "value": "454028",
      },
      Object {
        "text": "CW2 Live Performance of Creative Work",
        "value": "454029",
      },
      Object {
        "text": "CW3 Recorded or Rendered Creative Work",
        "value": "454030",
      },
      Object {
        "text": "CW4 Curated or Produced Exhibition or Event",
        "value": "454031",
      },
      Object {
        "text": "CW5 Research Report for an External Body",
        "value": "454032",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  meta={
    Object {
      "error": "Test error",
    }
  }
  onChange={[MockFunction]}
  placeholder="Test placeholder"
  value={
    Array [
      "One",
      "Two",
    ]
  }
/>
`;
